--- a/mail/nginx/default.conf
+++ b/mail/nginx/default.conf
@@ -1,6 +1,18 @@
+# HTTP -> HTTPS редирект
 server {
     listen 80;
     server_name localhost;
+
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS сервер
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate     /etc/nginx/certs/localhost.crt;
+    ssl_certificate_key /etc/nginx/certs/localhost.key;
 
     root /var/www/html/public;
     index index.php index.html;
