--- a/mail/docker-compose.yml
+++ b/mail/docker-compose.yml
@@ -17,9 +17,11 @@ services:
     container_name: nginx
     ports:
       - "8080:80"
+      - "443:443"
     volumes:
       - ./:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certs:/etc/nginx/certs:ro
     depends_on:
       - php
     restart: unless-stopped
